# download_python_repos

./: .gitignore  Cargo.toml
src/: deduplicate_py_files.rs  download_lnk.rs  download_pck.rs  main.rs  remove_non_parsable_python_files.rs  save_zip.rs  unpack_pck.rs
