[package]
name = "download_python_url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false,  features = ["blocking", "json", "cookies", "rustls-tls"] }
rayon = "1.7.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5.8"
anyhow = "1.0"
tar = "0.4"
flate2 = "1.0"
jwalk = "0.8.1"
